user guide update